force-app/main/default/objects/Hard_Code_Ids__c/Hard_Code_Ids__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store recordIds used in Flows, validations rules and formulas.</description>
    <label>Hard Code Ids</label>
</CustomObject>