force-app/main/default/objects/Hard_Code_Ids__c/fields/Add_ae_cel__c.field-meta.xml
<CustomField>
    <fullName>Add_ae_cel__c</fullName>
    <description>Field is used in Flow { Campaign: After Create }</description>
    <label>Add ae-cel</label>
    <length>18</length>
    <type>Text</type>
</CustomField>