force-app/main/default/objects/Hard_Code_Ids__c/fields/Add_ladm_team_americas__c.field-meta.xml
<CustomField>
    <fullName>Add_ladm_team_americas__c</fullName>
    <description>Field is used in Flow { Campaign: After Create }</description>
    <label>Add ladm-team-americas</label>
    <length>18</length>
    <type>Text</type>
</CustomField>