force-app/main/default/objects/Hard_Code_Ids__c/fields/Add_ms_team_global__c.field-meta.xml
<CustomField>
    <fullName>Add_ms_team_global__c</fullName>
    <description>Field is used in Flow { Campaign: After Create }</description>
    <label>Add ms-team-global</label>
    <length>18</length>
    <type>Text</type>
</CustomField>