force-app/main/default/objects/Hard_Code_Ids__c/fields/Add_ps_sho__c.field-meta.xml
<CustomField>
    <fullName>Add_ps_sho__c</fullName>
    <description>Field is used in Flow { Campaign: After Create }</description>
    <label>Add ps sho</label>
    <length>18</length>
    <type>Text</type>
</CustomField>