force-app/main/default/objects/Hard_Code_Ids__c/fields/AE_CEL__c.field-meta.xml
<CustomField>
    <fullName>AE_CEL__c</fullName>
    <label>AE CEL group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>