force-app/main/default/objects/Hard_Code_Ids__c/fields/AE_POS__c.field-meta.xml
<CustomField>
    <fullName>AE_POS__c</fullName>
    <label>AE POS group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>