force-app/main/default/objects/Hard_Code_Ids__c/fields/AE_SHO__c.field-meta.xml
<CustomField>
    <fullName>AE_SHO__c</fullName>
    <label>AE SHO group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>