force-app/main/default/objects/Hard_Code_Ids__c/fields/APAC_Order_Group__c.field-meta.xml
<CustomField>
    <fullName>APAC_Order_Group__c</fullName>
    <description>APAC Order Group Production ID : 0F957000000HM2gCAG</description>
    <label>APAC Order Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>