force-app/main/default/objects/Hard_Code_Ids__c/fields/API_Marketing_Automation_User__c.field-meta.xml
<CustomField>
    <fullName>API_Marketing_Automation_User__c</fullName>
    <defaultValue>&quot;0052p00000AIuagAAD&quot;</defaultValue>
    <label>API Marketing Automation User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>