force-app/main/default/objects/Hard_Code_Ids__c/fields/Contact_Finance_RType__c.field-meta.xml
<CustomField>
    <fullName>Contact_Finance_RType__c</fullName>
    <description>Record Type Id of Standard Contact : 01257000000BeCA</description>
    <label>Contact Finance RType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>