force-app/main/default/objects/Hard_Code_Ids__c/fields/Contact_Standard_RType__c.field-meta.xml
<CustomField>
    <fullName>Contact_Standard_RType__c</fullName>
    <description>Record Type Id of Standard Contact : 01257000000BeCB</description>
    <label>Contact Standard RType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>