force-app/main/default/objects/Hard_Code_Ids__c/fields/Email_PS_POS__c.field-meta.xml
<CustomField>
    <fullName>Email_PS_POS__c</fullName>
    <description>Contains email of the POS manager. used in SPR after insert/update flow</description>
    <inlineHelpText>Contains email of the POS manager. used in SPR after insert/update flow</inlineHelpText>
    <label>Email PS POS</label>
    <type>Email</type>
</CustomField>