force-app/main/default/objects/Hard_Code_Ids__c/fields/Email_PS_SHO__c.field-meta.xml
<CustomField>
    <fullName>Email_PS_SHO__c</fullName>
    <description>Contains email of the SHO  manager. used in SPR after insert/update flow</description>
    <inlineHelpText>Contains email of the SHO  manager. used in SPR after insert/update flow</inlineHelpText>
    <label>Email PS SHO</label>
    <type>Email</type>
</CustomField>