force-app/main/default/objects/Hard_Code_Ids__c/fields/EMMY_W_JODY_W_MAYA_W_focus_group__c.field-meta.xml
<CustomField>
    <fullName>EMMY_W_JODY_W_MAYA_W_focus_group__c</fullName>
    <defaultValue>CASESAFEID(&apos;0F957000000HM2l&apos;)</defaultValue>
    <description>EMMY-W, JODY-W,MAYA-W focus group
https://u-blox.my.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F957000000HM2l</description>
    <inlineHelpText>That is being used in Opp Product: Email Alerts Flow</inlineHelpText>
    <label>EMMY-W, JODY-W,MAYA-W focus group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>