force-app/main/default/objects/Hard_Code_Ids__c/fields/Global_Distribution_Queue__c.field-meta.xml
<CustomField>
    <fullName>Global_Distribution_Queue__c</fullName>
    <label>Global Distribution Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>