force-app/main/default/objects/Hard_Code_Ids__c/fields/LEA_M8T_0_01__c.field-meta.xml
<CustomField>
    <fullName>LEA_M8T_0_01__c</fullName>
    <label>LEA-M8T-0-01</label>
    <length>20</length>
    <type>Text</type>
</CustomField>