force-app/main/default/objects/Hard_Code_Ids__c/fields/Marketing_Management_Group__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Management_Group__c</fullName>
    <defaultValue>CASESAFEID(&apos;0F957000000kEEY&apos;)</defaultValue>
    <label>Marketing Management Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>