force-app/main/default/objects/Hard_Code_Ids__c/fields/Partner_Base_Quotation_Profile__c.field-meta.xml
<CustomField>
    <fullName>Partner_Base_Quotation_Profile__c</fullName>
    <label>Partner Base Quotation Profile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>