force-app/main/default/objects/Hard_Code_Ids__c/fields/Partner_Community_Profile_P_Base__c.field-meta.xml
<CustomField>
    <fullName>Partner_Community_Profile_P_Base__c</fullName>
    <label>Partner Community Profile (P.Base)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>