force-app/main/default/objects/Hard_Code_Ids__c/fields/Qianxun_Ltd__c.field-meta.xml
<CustomField>
    <fullName>Qianxun_Ltd__c</fullName>
    <label>Qianxun Ltd</label>
    <length>20</length>
    <type>Text</type>
</CustomField>