force-app/main/default/objects/Hard_Code_Ids__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <label>Quality group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>