force-app/main/default/objects/Hard_Code_Ids__c/fields/Service_FAE__c.field-meta.xml
<CustomField>
    <fullName>Service_FAE__c</fullName>
    <label>Service FAE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>