force-app/main/default/objects/Hard_Code_Ids__c/fields/Service_Technical_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Technical_Manager__c</fullName>
    <label>Service Technical Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>