force-app/main/default/objects/Hard_Code_Ids__c/fields/UBX_M8130_KT__c.field-meta.xml
<CustomField>
    <fullName>UBX_M8130_KT__c</fullName>
    <label>UBX-M8130-KT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>